# serde-with-value-affix

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  serde_with_affix.rs  with_content_suffix.rs
